--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^1.0.0",
