--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,12 @@
     "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.5.2",
     "style-loader": "^0.23.0",
+    "universal-cookie": "^3.0.4",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
