--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot"
+    "start": "cross-env NODE_ENV=development env-cmd .env webpack-dev-server --mode development --open --hot"
   },
   "author": "Eric Bolboa",
   "license": "ISC",
@@ -15,8 +15,11 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "env-cmd": "^8.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.2",
