--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "env-cmd": "^8.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "js-cookie": "^2.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-cookie": "^3.0.4",
